# OOP_Lab1

./: CMakeLists.txt
include/: replace.hpp
src/: main.cpp  replace.cpp
tests/: CMakeLists.txt  test_replace.cpp
